# AFPlayer

./: .gitignore  README.md
AFPlayer/: .gitignore  build.gradle  build_android.sh  gradle.properties  settings.gradle
AFPlayer/app/: build.gradle
AFPlayer/app/src/main/: AndroidManifest.xml
AFPlayer/app/src/main/cpp/: CMakeLists.txt  native_player_jni.cpp
AFPlayer/app/src/main/cpp/core/: CMakeLists.txt  player_main.cpp  player_main.h  user_player.h
AFPlayer/app/src/main/cpp/core/audio/: CMakeLists.txt  sl_helper.cpp  sl_player.cpp  sl_player.h
AFPlayer/app/src/main/cpp/core/common/: CMakeLists.txt  android_log.h  call_java.cpp  call_java.h  const.h  global.cpp  global.h  macro.h  safe_queue.h
AFPlayer/app/src/main/cpp/core/ffmpeg/: CMakeLists.txt  audio_swr.cpp  audio_swr.h  ff_decoder.cpp  ff_decoder.h  video_sws.cpp  video_sws.h
AFPlayer/app/src/main/cpp/core/video/: CMakeLists.txt  gl_helper.cpp  gl_player.cpp  gl_player.h
AFPlayer/app/src/main/cpp/include/libavcodec/: avcodec.h
AFPlayer/app/src/main/cpp/include/libavfilter/: avfilter.h
AFPlayer/app/src/main/cpp/include/libavformat/: avformat.h  avio.h
AFPlayer/app/src/main/cpp/include/libavutil/: avstring.h  frame.h  mem.h  opt.h  parseutils.h  samplefmt.h  time.h  timecode.h
AFPlayer/app/src/main/res/layout/: activity_main.xml
AFPlayer/app/src/main/res/values/: strings.xml  styles.xml
AFPlayer/doc/memory-leak/: .gitignore  README.md  README_cn.md
FFmpegImportDemo/: settings.gradle
FFmpegImportDemo/app/: build.gradle
FFmpegImportDemo/app/src/main/: AndroidManifest.xml
FFmpegImportDemo/app/src/main/cpp/: CMakeLists.txt  player_main.cpp
FFmpegImportDemo/app/src/main/cpp/include/libavcodec/: ac3_parser.h  adts_parser.h  avcodec.h  avdct.h  avfft.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  qsv.h  vaapi.h  vdpau.h  version.h  videotoolbox.h  vorbis_parser.h  xvmc.h
FFmpegImportDemo/app/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  version.h
FFmpegImportDemo/app/src/main/res/values/: strings.xml
FFmpegMediaCodecDemo/: settings.gradle
FFmpegMediaCodecDemo/app/: build.gradle
FFmpegMediaCodecDemo/app/src/main/: AndroidManifest.xml
FFmpegMediaCodecDemo/app/src/main/cpp/: CMakeLists.txt  player_main.cpp
FFmpegMediaCodecDemo/app/src/main/cpp/core/: hw_mediacodec.cpp  hw_mediacodec.h
FFmpegMediaCodecDemo/app/src/main/res/layout/: activity_main.xml
FFmpegMediaCodecDemo/app/src/main/res/values/: strings.xml
OpenGLESDemo/app/: build.gradle
OpenGLESDemo/app/src/main/: AndroidManifest.xml
OpenGLESDemo/app/src/main/cpp/: CMakeLists.txt  player_main.cpp
OpenGLESDemo/app/src/main/cpp/core/: video_common.cpp  video_common.h  video_player.cpp  video_player.h
OpenGLESDemo/app/src/main/res/layout/: activity_main.xml
OpenGLMacTextureDemo/: CMakeLists.txt  a-frame-384x216.rgb24  main.cpp
OpenSLESDemo/: .gitignore  settings.gradle
OpenSLESDemo/app/src/main/: AndroidManifest.xml
OpenSLESDemo/app/src/main/cpp/: CMakeLists.txt  player_main.cpp
OpenSLESDemo/app/src/main/cpp/core/: audio_common.cpp  audio_common.h  audio_player.cpp  audio_player.h
OpenSLESDemo/app/src/main/res/values/: strings.xml
(+108 files in other folders)
